--- a/_config.yml
+++ b/_config.yml
@@ -80,12 +80,12 @@ analytics:
 
 # Site Author
 author:
-  name             : "Saurabh Prasad"
+  name             : "Prof. Saurabh Prasad"
   avatar           : "profile.png"
-  bio              : "Director, Machine Learning and Signal Processing Laboratory; Associate Professor, Electrical and Computer Engineering"
+  bio              : "Director, Machine Learning and Signal Processing Laboratory;  Department of Electrical and Computer Engineering"
   location         : "University of Houston"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
@@ -96,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : #"academicpages"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
