--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "BNews"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "Biosketch"
     url: /cv/
     
   - title: "Team"
