--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Prof. Saurabh Prasad"
-  avatar           : "profile.png"
+  avatar           : "me.jpg"
   bio              : "Director, Machine Learning and Signal Processing Laboratory;  Department of Electrical and Computer Engineering"
   location         : "University of Houston"
   employer         :
