--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,15 @@
 # main links links
 main:
+  - title: "Research"
+    url: /research/
+  
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
         
-  - title: "BNews"
+  - title: "News"
     url: /year-archive/
     
   - title: "Biosketch"
