--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Prof. Saurabh Prasad"
-  avatar           : "me.jpg"
-  bio              : "Director, Machine Learning and Signal Processing Laboratory;  Department of Electrical and Computer Engineering"
+  avatar           : #"me.jpg"
+  bio              : "Professor of Electrical and Computer Engineering and Lab Director#"Director, Machine Learning and Signal Processing Laboratory;  Department of Electrical and Computer Engineering"
   location         : "University of Houston"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
