--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,12 +8,12 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
-        
-  - title: "News"
-    url: /year-archive/
     
   - title: "Biosketch"
-    url: /cv/
+    url: /biosketch/
     
   - title: "Team"
     url: /team/
+            
+  - title: "News"
+    url: /year-archive/
